--- a/css.css
+++ b/css.css
@@ -7,19 +7,50 @@ body{
 }
 #body {
     width: 100%;
-    height: calc(100vh - 42px);
+    height: 100vh;
+    overflow:auto;
 }
 
 .menus {
-    background-color: #2c2c2c;
+    background-color: #eeeeee;
     display: flex;
     align-items: center;
 }
 
+.menu-btn {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 10px;
+    height: 50px;
+}
+.menu-btn:hover {
+    color: black;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#plain-data{
+    width: 100vw;
+    height: calc(100vh - 50px);
+    overflow: auto;
+}
 #qrcode-container{
     width: 100%;
     height: calc(100vh - 42px);
     display:grid;
     justify-content: center;
     align-items: center;
+}
+
+
+
+/* scroll */
+.scroll::-webkit-scrollbar {
+    width:10px;
+    background-color: #2c2c2c
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    background-color: #6c6c6c
 }
